--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hivoro-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://arkpandey789.github.io/hivoro", 
+  "homepage": "https://arkpandey789.github.io/hivoro-website", 
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
