--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "hivoro-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://arkpandey789.github.io/hivoro-website", 
+  "homepage": "https://arkpandey789.github.io/hivoro-website",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "airtable": "^0.12.2",
     "ajv": "^8.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -20,8 +21,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build", 
-    "deploy": "gh-pages -d build", 
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,6 +45,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.2.0" 
+    "gh-pages": "^6.2.0"
   }
 }
